# fitness-eval-app

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: copilot-instructions.md
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: auth_service.py  client_service.py  config.py  database.py  db_models.py  db_service.py  i18n_service.py  llm_service.py  logic.py  main.py  migrate_json_to_db.py  models.py  pdf_service.py
backend/app/prompts/: summary_prompt.txt  system_prompt.txt  workout_prompt.txt
backend/data/: coaches.json  golden_profiles.json
backend/data/i18n/: en.json  es.json  fa.json
backend/data/norms/: body_fat.json  plank.json  pushup.json  sit_and_reach.json  step_test.json  wall_sit.json  zipper.json
backend/templates/: report.html
backend/tests/: test_logic.py  test_progress.py
docs/: architecture.md  business-plan.md  future-vision.md  implementation-plan.md  mvp-plan.md  poc-architecture.md  unified-knitting-kettle.md
frontend/: .dockerignore  Dockerfile  app.py  pyproject.toml  utils.py
frontend/pages/: 0_signup.py  1_client_profile.py  1b_body_measures.py  2_assessment.py  3_report.py  home.py  login.py
notebooks/: db_explorer.ipynb
