[tool.poetry]
name = "fitness-eval-backend"
version = "0.1.0"
description = "Fitness evaluation app — FastAPI backend"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
pydantic = "^2"
pydantic-settings = "^2"
pandas = "^2"
langchain = "^0.3"
langchain-openai = "^0.3"
langchain-ollama = "^0.3"
weasyprint = "^63"
jinja2 = "^3"
python-dotenv = "^1"
httpx = "^0.28"
markdown = "^3"
sqlalchemy = {extras = ["asyncio"], version = "^2"}
aiosqlite = "^0.20"
bcrypt = "^4"
plotly = "^6.5.2"
kaleido = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "^0.24"
mypy = "^1"
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
