[tool.poetry]
name = "fitness-eval-frontend"
version = "0.1.0"
description = "Fitness evaluation app — Streamlit frontend"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = "^1"
httpx = "^0.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
